python_ffi/lotrc.h


typedef struct mut_slice_ObjAXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ObjAXbox;
typedef struct DumpInfo_ObjAXbox {
  struct mut_slice_ObjAXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ObjAXbox;
typedef struct mut_slice_Obj0Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Obj0Xbox;
typedef struct DumpInfo_Obj0Xbox {
  struct mut_slice_Obj0Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Obj0Xbox;
typedef struct mut_slice_ModelInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ModelInfoXbox;
typedef struct DumpInfo_ModelInfoXbox {
  struct mut_slice_ModelInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ModelInfoXbox;
typedef struct mut_slice_BufferInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_BufferInfoXbox;
typedef struct DumpInfo_BufferInfoXbox {
  struct mut_slice_BufferInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_BufferInfoXbox;
typedef struct mut_slice_Mat1Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat1Xbox;
typedef struct DumpInfo_Mat1Xbox {
  struct mut_slice_Mat1Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat1Xbox;
typedef struct mut_slice_Mat2Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat2Xbox;
typedef struct DumpInfo_Mat2Xbox {
  struct mut_slice_Mat2Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat2Xbox;
typedef struct mut_slice_Mat3Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat3Xbox;
typedef struct DumpInfo_Mat3Xbox {
  struct mut_slice_Mat3Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat3Xbox;
typedef struct mut_slice_Mat4Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat4Xbox;
typedef struct DumpInfo_Mat4Xbox {
  struct mut_slice_Mat4Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat4Xbox;
typedef struct mut_slice_MatExtraXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_MatExtraXbox;
typedef struct DumpInfo_MatExtraXbox {
  struct mut_slice_MatExtraXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_MatExtraXbox;
typedef struct mut_slice_ShapeInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ShapeInfoXbox;
typedef struct DumpInfo_ShapeInfoXbox {
  struct mut_slice_ShapeInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ShapeInfoXbox;
typedef struct mut_slice_HkShapeInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkShapeInfoXbox;
typedef struct DumpInfo_HkShapeInfoXbox {
  struct mut_slice_HkShapeInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkShapeInfoXbox;
typedef struct mut_slice_HkConstraintDataXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintDataXbox;
typedef struct DumpInfo_HkConstraintDataXbox {
  struct mut_slice_HkConstraintDataXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintDataXbox;
typedef struct mut_slice_VBuffInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_VBuffInfoXbox;
typedef struct DumpInfo_VBuffInfoXbox {
  struct mut_slice_VBuffInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_VBuffInfoXbox;
typedef struct mut_slice_IBuffInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_IBuffInfoXbox;
typedef struct DumpInfo_IBuffInfoXbox {
  struct mut_slice_IBuffInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_IBuffInfoXbox;
typedef struct mut_slice_TextureInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_TextureInfoXbox;
typedef struct DumpInfo_TextureInfoXbox {
  struct mut_slice_TextureInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_TextureInfoXbox;
typedef struct mut_slice_AnimationInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_AnimationInfoXbox;
typedef struct DumpInfo_AnimationInfoXbox {
  struct mut_slice_AnimationInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_AnimationInfoXbox;
typedef struct mut_slice_HkConstraintInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintInfoXbox;
typedef struct DumpInfo_HkConstraintInfoXbox {
  struct mut_slice_HkConstraintInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintInfoXbox;
typedef struct mut_slice_EffectInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_EffectInfoXbox;
typedef struct DumpInfo_EffectInfoXbox {
  struct mut_slice_EffectInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_EffectInfoXbox;
typedef struct mut_slice_PFieldInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_PFieldInfoXbox;
typedef struct DumpInfo_PFieldInfoXbox {
  struct mut_slice_PFieldInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_PFieldInfoXbox;
typedef struct mut_slice_GFXBlockInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_GFXBlockInfoXbox;
typedef struct DumpInfo_GFXBlockInfoXbox {
  struct mut_slice_GFXBlockInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_GFXBlockInfoXbox;
typedef struct mut_slice_AnimationBlockInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_AnimationBlockInfoXbox;
typedef struct DumpInfo_AnimationBlockInfoXbox {
  struct mut_slice_AnimationBlockInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_AnimationBlockInfoXbox;
typedef struct mut_slice_FoliageInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_FoliageInfoXbox;
typedef struct DumpInfo_FoliageInfoXbox {
  struct mut_slice_FoliageInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_FoliageInfoXbox;
typedef struct mut_slice_RadiosityValsInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_RadiosityValsInfoXbox;
typedef struct DumpInfo_RadiosityValsInfoXbox {
  struct mut_slice_RadiosityValsInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_RadiosityValsInfoXbox;
typedef struct mut_slice_u32Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_u32Xbox;
typedef struct DumpInfo_u32Xbox {
  struct mut_slice_u32Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_u32Xbox;
typedef struct Vec_DumpInfoDataXbox {
  uint64_t align;
  uint8_t pad[16];
} Vec_DumpInfoDataXbox;
typedef struct DumpInfosXbox {
  struct DumpInfo_ObjAXbox objas;
  struct DumpInfo_Obj0Xbox obj0s;
  struct DumpInfo_ModelInfoXbox models;
  struct DumpInfo_BufferInfoXbox buffers;
  struct DumpInfo_Mat1Xbox mat1s;
  struct DumpInfo_Mat2Xbox mat2s;
  struct DumpInfo_Mat3Xbox mat3s;
  struct DumpInfo_Mat4Xbox mat4s;
  struct DumpInfo_MatExtraXbox mat_extras;
  struct DumpInfo_ShapeInfoXbox shapes;
  struct DumpInfo_HkShapeInfoXbox hk_shapes;
  struct DumpInfo_HkConstraintDataXbox hk_constraint_datas;
  struct DumpInfo_VBuffInfoXbox vbuffs;
  struct DumpInfo_IBuffInfoXbox ibuffs;
  struct DumpInfo_TextureInfoXbox textures;
  struct DumpInfo_AnimationInfoXbox animations;
  struct DumpInfo_HkConstraintInfoXbox hk_constraints;
  struct DumpInfo_EffectInfoXbox effects;
  struct DumpInfo_PFieldInfoXbox pfields;
  struct DumpInfo_GFXBlockInfoXbox gfxs;
  struct DumpInfo_AnimationBlockInfoXbox animation_blocks;
  struct DumpInfo_FoliageInfoXbox foliages;
  struct DumpInfo_RadiosityValsInfoXbox radiosity_vals;
  struct DumpInfo_u32Xbox offsets;
  struct Vec_DumpInfoDataXbox model_data;
  struct Vec_DumpInfoDataXbox texture_data;
} DumpInfosXbox;
typedef struct mut_slice_ObjAPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ObjAPs3;
typedef struct DumpInfo_ObjAPs3 {
  struct mut_slice_ObjAPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ObjAPs3;
typedef struct mut_slice_Obj0Ps3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Obj0Ps3;
typedef struct DumpInfo_Obj0Ps3 {
  struct mut_slice_Obj0Ps3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Obj0Ps3;
typedef struct mut_slice_ModelInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ModelInfoPs3;
typedef struct DumpInfo_ModelInfoPs3 {
  struct mut_slice_ModelInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ModelInfoPs3;
typedef struct mut_slice_BufferInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_BufferInfoPs3;
typedef struct DumpInfo_BufferInfoPs3 {
  struct mut_slice_BufferInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_BufferInfoPs3;
typedef struct mut_slice_Mat1Ps3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat1Ps3;
typedef struct DumpInfo_Mat1Ps3 {
  struct mut_slice_Mat1Ps3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat1Ps3;
typedef struct mut_slice_Mat2Ps3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat2Ps3;
typedef struct DumpInfo_Mat2Ps3 {
  struct mut_slice_Mat2Ps3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat2Ps3;
typedef struct mut_slice_Mat3Ps3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat3Ps3;
typedef struct DumpInfo_Mat3Ps3 {
  struct mut_slice_Mat3Ps3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat3Ps3;
typedef struct mut_slice_Mat4Ps3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat4Ps3;
typedef struct DumpInfo_Mat4Ps3 {
  struct mut_slice_Mat4Ps3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat4Ps3;
typedef struct mut_slice_MatExtraPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_MatExtraPs3;
typedef struct DumpInfo_MatExtraPs3 {
  struct mut_slice_MatExtraPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_MatExtraPs3;
typedef struct mut_slice_ShapeInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ShapeInfoPs3;
typedef struct DumpInfo_ShapeInfoPs3 {
  struct mut_slice_ShapeInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ShapeInfoPs3;
typedef struct mut_slice_HkShapeInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkShapeInfoPs3;
typedef struct DumpInfo_HkShapeInfoPs3 {
  struct mut_slice_HkShapeInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkShapeInfoPs3;
typedef struct mut_slice_HkConstraintDataPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintDataPs3;
typedef struct DumpInfo_HkConstraintDataPs3 {
  struct mut_slice_HkConstraintDataPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintDataPs3;
typedef struct mut_slice_VBuffInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_VBuffInfoPs3;
typedef struct DumpInfo_VBuffInfoPs3 {
  struct mut_slice_VBuffInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_VBuffInfoPs3;
typedef struct mut_slice_IBuffInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_IBuffInfoPs3;
typedef struct DumpInfo_IBuffInfoPs3 {
  struct mut_slice_IBuffInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_IBuffInfoPs3;
typedef struct mut_slice_TextureInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_TextureInfoPs3;
typedef struct DumpInfo_TextureInfoPs3 {
  struct mut_slice_TextureInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_TextureInfoPs3;
typedef struct mut_slice_AnimationInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_AnimationInfoPs3;
typedef struct DumpInfo_AnimationInfoPs3 {
  struct mut_slice_AnimationInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_AnimationInfoPs3;
typedef struct mut_slice_HkConstraintInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintInfoPs3;
typedef struct DumpInfo_HkConstraintInfoPs3 {
  struct mut_slice_HkConstraintInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintInfoPs3;
typedef struct mut_slice_EffectInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_EffectInfoPs3;
typedef struct DumpInfo_EffectInfoPs3 {
  struct mut_slice_EffectInfoPs3 vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_EffectInfoPs3;