python_ffi/lotrc_rs.pxd


  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkShapeInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkShapeInfoXbox:
    mut_slice_HkShapeInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintDataXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintDataXbox:
    mut_slice_HkConstraintDataXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_VBuffInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_VBuffInfoXbox:
    mut_slice_VBuffInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_IBuffInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_IBuffInfoXbox:
    mut_slice_IBuffInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_TextureInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_TextureInfoXbox:
    mut_slice_TextureInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_AnimationInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_AnimationInfoXbox:
    mut_slice_AnimationInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintInfoXbox:
    mut_slice_HkConstraintInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_EffectInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_EffectInfoXbox:
    mut_slice_EffectInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_PFieldInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_PFieldInfoXbox:
    mut_slice_PFieldInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_GFXBlockInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_GFXBlockInfoXbox:
    mut_slice_GFXBlockInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_AnimationBlockInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_AnimationBlockInfoXbox:
    mut_slice_AnimationBlockInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_FoliageInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_FoliageInfoXbox:
    mut_slice_FoliageInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_RadiosityValsInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_RadiosityValsInfoXbox:
    mut_slice_RadiosityValsInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_u32Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_u32Xbox:
    mut_slice_u32Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Vec_DumpInfoDataXbox:
    uint64_t align;
    uint8_t pad[16];

  cdef struct DumpInfosXbox:
    DumpInfo_ObjAXbox objas;
    DumpInfo_Obj0Xbox obj0s;
    DumpInfo_ModelInfoXbox models;
    DumpInfo_BufferInfoXbox buffers;
    DumpInfo_Mat1Xbox mat1s;
    DumpInfo_Mat2Xbox mat2s;
    DumpInfo_Mat3Xbox mat3s;
    DumpInfo_Mat4Xbox mat4s;
    DumpInfo_MatExtraXbox mat_extras;
    DumpInfo_ShapeInfoXbox shapes;
    DumpInfo_HkShapeInfoXbox hk_shapes;
    DumpInfo_HkConstraintDataXbox hk_constraint_datas;
    DumpInfo_VBuffInfoXbox vbuffs;
    DumpInfo_IBuffInfoXbox ibuffs;
    DumpInfo_TextureInfoXbox textures;
    DumpInfo_AnimationInfoXbox animations;
    DumpInfo_HkConstraintInfoXbox hk_constraints;
    DumpInfo_EffectInfoXbox effects;
    DumpInfo_PFieldInfoXbox pfields;
    DumpInfo_GFXBlockInfoXbox gfxs;
    DumpInfo_AnimationBlockInfoXbox animation_blocks;
    DumpInfo_FoliageInfoXbox foliages;
    DumpInfo_RadiosityValsInfoXbox radiosity_vals;
    DumpInfo_u32Xbox offsets;
    Vec_DumpInfoDataXbox model_data;
    Vec_DumpInfoDataXbox texture_data;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ObjAPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ObjAPs3:
    mut_slice_ObjAPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Obj0Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Obj0Ps3:
    mut_slice_Obj0Ps3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ModelInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ModelInfoPs3:
    mut_slice_ModelInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_BufferInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_BufferInfoPs3:
    mut_slice_BufferInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat1Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat1Ps3:
    mut_slice_Mat1Ps3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat2Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat2Ps3:
    mut_slice_Mat2Ps3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat3Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat3Ps3:
    mut_slice_Mat3Ps3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat4Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat4Ps3:
    mut_slice_Mat4Ps3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_MatExtraPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_MatExtraPs3:
    mut_slice_MatExtraPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ShapeInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ShapeInfoPs3:
    mut_slice_ShapeInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkShapeInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkShapeInfoPs3:
    mut_slice_HkShapeInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintDataPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintDataPs3:
    mut_slice_HkConstraintDataPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_VBuffInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_VBuffInfoPs3:
    mut_slice_VBuffInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_IBuffInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_IBuffInfoPs3:
    mut_slice_IBuffInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_TextureInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_TextureInfoPs3:
    mut_slice_TextureInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_AnimationInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_AnimationInfoPs3:
    mut_slice_AnimationInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintInfoPs3:
    mut_slice_HkConstraintInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_EffectInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_EffectInfoPs3:
    mut_slice_EffectInfoPs3 vals;
    uintptr_t ind;
    uintptr_t offset;
